--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,12 +4,22 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        {
+            "name": "Launch Program",
+            "program": "${workspaceFolder}/Javascripts/array_chunk.js",
+            "request": "launch",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "pwa-node"
+        },
 
         {
             "name": "Debug Local File",
             "type": "Ruby",
             "request": "launch",
-            "program": "${workspaceRoot}/fibonacci_numbers_dynamic.rb"
+            "program": "${workspaceRoot}/array_chunked.rb"
         }
+
     ]
 }
